fix_output.txt
/home/runner/work/AST-Aros-Financial-Paradigm/AST-Aros-Financial-Paradigm/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
scripts/fix-ci.ts(173,7): error TS2349: This expression is not callable.
  Type 'String' has no call signatures.
scripts/fix-ci.ts(179,7): error TS2349: This expression is not callable.
  Type 'String' has no call signatures.
scripts/fix-ci.ts(210,11): error TS2349: This expression is not callable.
  Type 'String' has no call signatures.
scripts/fix-ci.ts(232,7): error TS2349: This expression is not callable.
  Type 'String' has no call signatures.
scripts/fix-ci.ts(283,7): error TS2349: This expression is not callable.
  Type 'String' has no call signatures.
scripts/fix-ci.ts(290,7): error TS2349: This expression is not callable.
  Type 'String' has no call signatures.
scripts/fix-ci.ts(291,40): error TS2349: This expression is not callable.
  Type 'String' has no call signatures.
scripts/fix-ci.ts(321,13): error TS2349: This expression is not callable.
  Type 'String' has no call signatures.

    at createTSError (/home/runner/work/AST-Aros-Financial-Paradigm/AST-Aros-Financial-Paradigm/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/runner/work/AST-Aros-Financial-Paradigm/AST-Aros-Financial-Paradigm/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/home/runner/work/AST-Aros-Financial-Paradigm/AST-Aros-Financial-Paradigm/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/home/runner/work/AST-Aros-Financial-Paradigm/AST-Aros-Financial-Paradigm/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/home/runner/work/AST-Aros-Financial-Paradigm/AST-Aros-Financial-Paradigm/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Object.require.extensions.<computed> [as .ts] (/home/runner/work/AST-Aros-Financial-Paradigm/AST-Aros-Financial-Paradigm/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1091:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:164:12) {
  diagnosticCodes: [
    2349, 2349, 2349,
    2349, 2349, 2349,
    2349, 2349
  ]
}
